GNOME Bugzilla – Bug 500999
Panel-background isn't used correctly from some applets
Last modified: 2014-11-24 04:06:57 UTC
Hi folks! If you a panel-background-image in your gtk-theme, some applets aren't using this oe correctly. Some are drawing the background moved down by 1px, some others by 2px. Possible solution: We need to have the applets with a transparent background. In this case we only had to specify a panel-bg. This is working with some themes like clearlooks or human. Sorry for my bad English... cheers stein
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.