update background when PanelAppletFrame size changes

When PanelAppletFrame changes size update applets background. This
is possible fix for bug:
https://bugzilla.gnome.org/show_bug.cgi?id=500999